force-app/main/default/objects/FieloPLT__Reward__c/FieloPLT__Reward__c.object-meta.xml
<CustomObject>
    <description>Rewards are the prizes available to Members who are part of a Program.</description>
    <label>Reward</label>
    <nameField>
        <label>Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>