force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__DaysAvailable__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__DaysAvailable__c</fullName>
    <description>Number of days the Unique Code (Voucher) generated through a redemption of a Reward is valid.</description>
    <inlineHelpText>Enter the number of days the Unique Code (Voucher) generated through a redemption of this Reward should be valid.</inlineHelpText>
    <label>Reward Voucher Validity (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>