force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Description__c</fullName>
    <description>Detailed description of the Reward.</description>
    <inlineHelpText>Give your Reward an enticing description.</inlineHelpText>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>