force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ExpirationDate__c</fullName>
    <description>The date after which a Reward is no longer valid to redeem. If blank, the Reward is valid indefinitely.</description>
    <inlineHelpText>Choose the expiration date for this Reward. If blank, the Reward will be valid indefinitely.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>