force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__ExternalURL__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ExternalURL__c</fullName>
    <description>External URL for the Reward image.</description>
    <inlineHelpText>Enter the URL for the Reward image.</inlineHelpText>
    <label>External URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>