force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__Image__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Image__c</fullName>
    <description>Reward image which can be uploaded.</description>
    <inlineHelpText>Upload an attractive image for your Reward.</inlineHelpText>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>