force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__IsInstantReward__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsInstantReward__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, a Reward is available to be given immediately to Members when they fulfill a Rule or Mission.</description>
    <inlineHelpText>When switched on, the Reward will be available to be given immediately to Members when they fulfill a Rule or Mission.</inlineHelpText>
    <label>Instant Reward</label>
    <type>Checkbox</type>
</CustomField>