force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__Points__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Points__c</fullName>
    <description>Number of Points needed to redeem a Reward.</description>
    <inlineHelpText>Enter the number of Points needed to redeem this Reward.</inlineHelpText>
    <label>Points</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>