force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Program that the Reward is associated with.</description>
    <inlineHelpText>The Program in which you&apos;ll use this Reward</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>