force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__Provider__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The individual or entity that provides the Reward (e.g. Amazon).</description>
    <inlineHelpText>This is the individual or entity that supplies the Reward (e.g. Amazon).</inlineHelpText>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>