force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__Segment__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Targets the Challenge by Segment. If no Segment is chosen or available, Reward can be redeemed by any Member who belongs to the Program.</description>
    <inlineHelpText>To target this Reward by Segment, add the Segment(s) you want to make eligible. If blank, all Program Members will be eligible. You can view, edit and create Segments in the Programs tab.</inlineHelpText>
    <label>Segment</label>
    <referenceTo>FieloPLT__Segment__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>