force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__Stock__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Stock__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Rewards available in stock. Used when Stock Type is &quot;Controlled by Quantity&quot;.</description>
    <inlineHelpText>Enter the number of Rewards available in stock.</inlineHelpText>
    <label>Available Stock Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>