force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__StockManagement__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__StockManagement__c</fullName>
    <description>Manages stock control: Controlled by Quantity (Exact Reward number must be entered in &quot;Available Stock Quantity&quot;); Controlled by Item (a defined file - .CSV, .txt - or list is uploaded containing specific Reward codes, each representing a Reward item); Unlimited (no control required; Reward can be redeemed unlimited times).</description>
    <inlineHelpText>Choose how to manage the Reward stock: Controlled by Quantity, Controlled by Item (a list containing specific Reward codes, each representing a Reward item) or Unlimited.</inlineHelpText>
    <label>Stock Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Controlled By Quantity</fullName>
                <default>true</default>
                <label>Controlled By Quantity</label>
            </value>
            <value>
                <fullName>Controlled By Item</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>