force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__UniqueVoucher__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UniqueVoucher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, the Unique Code generated during redemption will encompass all Redemption Items related to a Reward. Used only for Rewards whose Stock Type is &quot;Controlled by Quantity&quot; or &quot;Unlimited&quot;.</description>
    <inlineHelpText>When switched on, the Unique Code generated during redemption will encompass all Redemption Items related to this Reward. Applies only if the Stock Type for this Reward is &quot;Controlled by Quantity&quot; or &quot;Unlimited&quot;.</inlineHelpText>
    <label>Unique Voucher</label>
    <type>Checkbox</type>
</CustomField>