force-app/main/default/objects/FieloPLT__Reward__c/fields/FieloPLT__UnitCost__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UnitCost__c</fullName>
    <description>Reward purchase cost.</description>
    <inlineHelpText>This is the purchase cost of the Reward.</inlineHelpText>
    <label>Unit Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>