force-app/main/default/objects/FieloPLT__Reward__c/fields/Iniciativa__c.field-meta.xml
<CustomField>
    <fullName>Iniciativa__c</fullName>
    <description>Tipos de iniciativa do incentivo.</description>
    <inlineHelpText>Tipos de iniciativa do incentivo.</inlineHelpText>
    <label>Iniciativa</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Youbet Perene</fullName>
            </value>
            <value>
                <fullName>Youbet Extra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>