force-app/main/default/objects/FieloPLT__Reward__c/fields/V_AreaElegivelYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_AreaElegivelYoubet__c</fullName>
    <description>Área do participante elegível ao Youbet.</description>
    <inlineHelpText>Área do participante elegível ao Youbet.</inlineHelpText>
    <label>Área Elegível ao Youbet</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VERTICAIS</fullName>
            </value>
            <value>
                <fullName>REGIÕES</fullName>
            </value>
            <value>
                <fullName>MULTI CANAL</fullName>
            </value>
            <value>
                <fullName>SERASA</fullName>
                <isActive>false</isActive>
                <label>SERASA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>