force-app/main/default/objects/FieloPLT__Reward__c/fields/V_BetcoinsComp__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsComp__c</fullName>
    <description>Preencha com valor igual a 1 para Youbet Extra. E com 0 (zero) quando for Youbet Perene.</description>
    <inlineHelpText>Preencha com valor igual a 1 para Youbet Extra. E com 0 (zero) quando for Youbet Perene</inlineHelpText>
    <label>Betcoins - Extra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>