force-app/main/default/objects/FieloPLT__Reward__c/fields/V_CargoElegivelYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_CargoElegivelYoubet__c</fullName>
    <description>Posição da hierarquia do participante elegível ao Youbet.</description>
    <inlineHelpText>Posição da hierarquia do participante elegível ao Youbet.</inlineHelpText>
    <label>Cargo Elegível ao Youbet</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GERENTE DE CONTAS</fullName>
            </value>
            <value>
                <fullName>DIRETOR</fullName>
            </value>
            <value>
                <fullName>COORDENADOR | GERENTE REGIONAL VIP</fullName>
            </value>
            <value>
                <fullName>LÍDER</fullName>
            </value>
            <value>
                <fullName>COORDENADOR I</fullName>
                <isActive>false</isActive>
                <label>COORDENADOR I</label>
            </value>
            <value>
                <fullName>COORDENADOR II</fullName>
                <isActive>false</isActive>
                <label>COORDENADOR II</label>
            </value>
            <value>
                <fullName>GERENTE REGIONAL VIP</fullName>
                <isActive>false</isActive>
                <label>GERENTE REGIONAL VIP</label>
            </value>
            <value>
                <fullName>LÍDER DE SETOR</fullName>
                <isActive>false</isActive>
                <label>LÍDER DE SETOR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>