force-app/main/default/objects/FieloPLT__Reward__c/fields/V_DataFimTexto__c.field-meta.xml
<CustomField>
    <fullName>V_DataFimTexto__c</fullName>
    <formula>TEXT(DAY( DATEVALUE( V_DataHoraFimYoubet__c ) ))+&apos;/&apos;+ TEXT(MONTH(DATEVALUE(V_DataHoraFimYoubet__c )))+&apos;/&apos; + TEXT(YEAR(DATEVALUE(V_DataHoraFimYoubet__c )))</formula>
    <label>Data Fim Texto</label>
    <type>Text</type>
</CustomField>