force-app/main/default/objects/FieloPLT__Reward__c/fields/V_DatafinalYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_DatafinalYoubet__c</fullName>
    <description>Data final do Youbet para ser utilizado em filtros do site.</description>
    <formula>DATEVALUE( V_DataHoraFimYoubet__c )</formula>
    <inlineHelpText>Data final do Youbet para ser utilizado em filtros do site.</inlineHelpText>
    <label>Data final Youbet</label>
    <type>Date</type>
</CustomField>