force-app/main/default/objects/FieloPLT__Reward__c/fields/V_DataHoraFimYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_DataHoraFimYoubet__c</fullName>
    <description>Data e hora para finalizar a vigência do youbet.</description>
    <inlineHelpText>Data e hora para finalizar a vigência do youbet.</inlineHelpText>
    <label>Data/Hora Fim do Youbet</label>
    <type>DateTime</type>
</CustomField>