force-app/main/default/objects/FieloPLT__Reward__c/fields/V_DataHoraInicioYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_DataHoraInicioYoubet__c</fullName>
    <description>Data e hora para iniciar a vigência do youbet.</description>
    <inlineHelpText>Data e hora para iniciar a vigência do youbet.</inlineHelpText>
    <label>Data/Hora Início do Youbet</label>
    <type>DateTime</type>
</CustomField>