force-app/main/default/objects/FieloPLT__Reward__c/fields/V_DataInicioTexto__c.field-meta.xml
<CustomField>
    <fullName>V_DataInicioTexto__c</fullName>
    <formula>TEXT(DAY( DATEVALUE(V_DataHoraInicioYoubet__c) ))+&apos;/&apos;+ TEXT(MONTH(DATEVALUE(V_DataHoraInicioYoubet__c)))+&apos;/&apos; + TEXT(YEAR(DATEVALUE(V_DataHoraInicioYoubet__c)))</formula>
    <label>Data Inicio Texto</label>
    <type>Text</type>
</CustomField>