force-app/main/default/objects/FieloPLT__Reward__c/fields/V_DataInicioYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_DataInicioYoubet__c</fullName>
    <description>Data de início do Youbet para ser utilizado em filtros do site.</description>
    <formula>DateValue(V_DataHoraInicioYoubet__c)</formula>
    <inlineHelpText>Data de início do Youbet para ser utilizado em filtros do site.</inlineHelpText>
    <label>Data de Início Youbet</label>
    <type>Date</type>
</CustomField>