force-app/main/default/objects/FieloPLT__Reward__c/fields/V_EmailCoberturaLance__c.field-meta.xml
<CustomField>
    <fullName>V_EmailCoberturaLance__c</fullName>
    <label>Email cobertura de lance</label>
    <type>Email</type>
</CustomField>