force-app/main/default/objects/FieloPLT__Reward__c/fields/V_Image__c.field-meta.xml
<CustomField>
    <fullName>V_Image__c</fullName>
    <formula>&apos;/comunidade&apos; + FieloPLT__ExternalURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>V_Image</label>
    <type>Text</type>
</CustomField>