force-app/main/default/objects/FieloPLT__Reward__c/fields/V_IsActive__c.field-meta.xml
<CustomField>
    <fullName>V_IsActive__c</fullName>
    <formula>AND(V_YoubetCompleto__c,
				RecordType.Name = &apos;Leilões&apos;,
				OR (ISBLANK(V_DataHoraInicioYoubet__c),
								V_DataHoraInicioYoubet__c &lt;= NOW()),
				V_DataHoraFimYoubet__c &gt;= NOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>