force-app/main/default/objects/FieloPLT__Reward__c/fields/V_LanceMinimo__c.field-meta.xml
<CustomField>
    <fullName>V_LanceMinimo__c</fullName>
    <description>Quando preenchido, deverá haver regra para não permitir que o participante dê um lance menor para o youbet que o valor preenchido neste campo.</description>
    <inlineHelpText>Quando preenchido, deverá haver regra para não permitir que o participante dê um lance menor para o youbet que o valor preenchido neste campo.</inlineHelpText>
    <label>Lance Mínimo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>