force-app/main/default/objects/FieloPLT__Reward__c/fields/V_LanceResgatarAgora__c.field-meta.xml
<CustomField>
    <fullName>V_LanceResgatarAgora__c</fullName>
    <description>Quando este campo estiver prenchido com alguma pontuação, quer dizer que o primeiro participante que der esse valor no lance, o youbet será encerrado.</description>
    <inlineHelpText>Quando este campo estiver prenchido com alguma pontuação, quer dizer que o primeiro participante que der esse valor no lance, o youbet será encerrado.</inlineHelpText>
    <label>Lance para Resgatar Agora</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>