force-app/main/default/objects/FieloPLT__Reward__c/fields/V_LiderancaElegivelYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_LiderancaElegivelYoubet__c</fullName>
    <description>Liderança do participante elegível ao Youbet.</description>
    <inlineHelpText>Liderança do participante elegível ao Youbet.</inlineHelpText>
    <label>Liderança Elegível ao Youbet</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MULTI SECTOR</fullName>
            </value>
            <value>
                <fullName>REGIÕES</fullName>
            </value>
            <value>
                <fullName>MULTI CANAL</fullName>
            </value>
            <value>
                <fullName>VAREJO, CPG E PAGAMENTOS</fullName>
            </value>
            <value>
                <fullName>BANCOS E FINANCEIRAS</fullName>
            </value>
            <value>
                <fullName>GRANDES BANCOS</fullName>
                <isActive>false</isActive>
                <label>GRANDES BANCOS</label>
            </value>
            <value>
                <fullName>NOVOS NEGÓCIOS</fullName>
                <isActive>false</isActive>
                <label>NOVOS NEGÓCIOS</label>
            </value>
            <value>
                <fullName>SERVIÇOS FINANCEIROS</fullName>
                <isActive>false</isActive>
                <label>SERVIÇOS FINANCEIROS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>