force-app/main/default/objects/FieloPLT__Reward__c/fields/V_NomeVencedor__c.field-meta.xml
<CustomField>
    <fullName>V_NomeVencedor__c</fullName>
    <label>Nome do Vencedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>