force-app/main/default/objects/FieloPLT__Reward__c/fields/V_ParticipanteUltimoLance__c.field-meta.xml
<CustomField>
    <fullName>V_ParticipanteUltimoLance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nome do participante que realizou o último lance desse youbet. Campo atualizado por process builder.</description>
    <inlineHelpText>Nome do participante que realizou o último lance desse youbet.</inlineHelpText>
    <label>Participante do Último Lance</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Leilões</relationshipLabel>
    <relationshipName>Leiloes</relationshipName>
    <type>Lookup</type>
</CustomField>