force-app/main/default/objects/FieloPLT__Reward__c/fields/V_QtdeLancesRealizados__c.field-meta.xml
<CustomField>
    <fullName>V_QtdeLancesRealizados__c</fullName>
    <description>Número de lances realizados no youbet pelos participantes. Atualizado por process builder.</description>
    <inlineHelpText>Número de lances realizados no youbet pelos participantes.</inlineHelpText>
    <label>Qtde de Lances Realizados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>