force-app/main/default/objects/FieloPLT__Reward__c/fields/V_Redemption__c.field-meta.xml
<CustomField>
    <fullName>V_Redemption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maior Lance</label>
    <referenceTo>FieloPLT__Redemption__c</referenceTo>
    <relationshipLabel>Prêmios/Leilões</relationshipLabel>
    <relationshipName>V_Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>