force-app/main/default/objects/FieloPLT__Reward__c/fields/V_RegulamentoYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_RegulamentoYoubet__c</fullName>
    <description>Utilizado para a inclusão do texto de regulamento do Youbet Perene ou Complementar.</description>
    <inlineHelpText>Utilizado para a inclusão do texto de regulamento do Youbet Perene ou Complementar.</inlineHelpText>
    <label>Regulamento Youbet</label>
    <length>100768</length>
    <type>Html</type>
</CustomField>