force-app/main/default/objects/FieloPLT__Reward__c/fields/V_TempoRestanteFimLances__c.field-meta.xml
<CustomField>
    <fullName>V_TempoRestanteFimLances__c</fullName>
    <description>Tempo restante para fim dos lances.</description>
    <formula>IF(
V_DataHoraFimYoubet__c - NOW() &lt; 0, 0,
V_DataHoraFimYoubet__c - NOW()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tempo restante para fim dos lances.</inlineHelpText>
    <label>Tempo Restante para Fim dos Lances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>