force-app/main/default/objects/FieloPLT__Reward__c/fields/V_TipoRegistroTextual__c.field-meta.xml
<CustomField>
    <fullName>V_TipoRegistroTextual__c</fullName>
    <description>Nome textual do tipo de registro a ser usado em process builder.</description>
    <formula>RecordType.DeveloperName</formula>
    <inlineHelpText>Nome textual do tipo de registro a ser usado em process builder.</inlineHelpText>
    <label>Tipo de Registro Textual</label>
    <type>Text</type>
</CustomField>