force-app/main/default/objects/FieloPLT__Reward__c/fields/V_TotalBetcoinsLances__c.field-meta.xml
<CustomField>
    <fullName>V_TotalBetcoinsLances__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Valor total de betcoins dos lances realizados para este Youbet.</description>
    <inlineHelpText>Valor total de betcoins dos lances realizados para este Youbet.</inlineHelpText>
    <label>Total Betcoins dos Lances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>