force-app/main/default/objects/FieloPLT__Reward__c/fields/V_UsarElegibilidade__c.field-meta.xml
<CustomField>
    <fullName>V_UsarElegibilidade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se este campo estiver assinalado, somente os participantes que forem elegíveis (notas fiscais em aberto no ano fiscal como referência) é que poderão participar deste leilião.</description>
    <inlineHelpText>Se este campo estiver assinalado, somente os participantes que forem elegíveis (notas fiscais em aberto no ano fiscal como referência) é que poderão participar deste leilião.</inlineHelpText>
    <label>Usar Elegibilidade?</label>
    <type>Checkbox</type>
</CustomField>