force-app/main/default/objects/FieloPLT__Reward__c/fields/V_ValorLanceGanhador__c.field-meta.xml
<CustomField>
    <fullName>V_ValorLanceGanhador__c</fullName>
    <description>Valor de betcoins do lance ganhador. Atualizado por process builder.</description>
    <inlineHelpText>Valor de betcoins do lance ganhador.</inlineHelpText>
    <label>Valor do Lance Ganhador</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>