force-app/main/default/objects/FieloPLT__Reward__c/fields/V_YoubetCompleto__c.field-meta.xml
<CustomField>
    <fullName>V_YoubetCompleto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se assinalado, indica que o cadastro do Youbet foi concluído e que a aplicação poderá relacionar os participantes que cumprirem os critérios desse Youbet para efeito de histórico e análises.</description>
    <inlineHelpText>Se assinalado, indica que o cadastro do Youbet foi concluído e que a aplicação poderá relacionar os participantes que cumprirem os critérios desse Youbet para efeito de histórico e análises.</inlineHelpText>
    <label>Youbet Completo</label>
    <type>Checkbox</type>
</CustomField>