force-app/main/default/objects/FieloPLT__Reward__c/fields/V_YoubetProcessado__c.field-meta.xml
<CustomField>
    <fullName>V_YoubetProcessado__c</fullName>
    <description>Campo atualizado com data e hora após processamento do batch para indicar o lance vencedor após a vigência do Youbet. Se assinalado, indica que o Youbet encerrado já teve a indicação do lance ganhador.</description>
    <inlineHelpText>Campo atualizado com data e hora após processamento do batch para indicar o lance vencedor após a vigência do Youbet. Se assinalado, indica que o Youbet encerrado já teve a indicação do lance ganhador.</inlineHelpText>
    <label>Youbet Processado</label>
    <type>DateTime</type>
</CustomField>