force-app/main/default/objects/FieloPLT__Reward__c/recordTypes/Leiloes.recordType-meta.xml
<RecordType>
    <fullName>Leiloes</fullName>
    <active>true</active>
    <description>Leilões para a iniciativa Youbet perene ou extra.</description>
    <label>Leilões</label>
</RecordType>