force-app/main/default/objects/FieloPLT__Reward__c/recordTypes/Premios.recordType-meta.xml
<RecordType>
    <fullName>Premios</fullName>
    <active>true</active>
    <description>Prêmios para resgate do participante.</description>
    <label>Prêmios</label>
</RecordType>