force-app/main/default/objects/FieloPLT__Reward__c/validationRules/FieloPLT__AvailableDays.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__AvailableDays</fullName>
    <active>true</active>
    <description>Value must be positive.</description>
    <errorConditionFormula>FieloPLT__DaysAvailable__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FieloPLT__DaysAvailable__c</errorDisplayField>
    <errorMessage>Value must be positive.</errorMessage>
</ValidationRule>