force-app/main/default/objects/FieloPLT__Reward__c/validationRules/FieloPLT__ChangeStockMode.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ChangeStockMode</fullName>
    <active>true</active>
    <description>Only allowed when stock equals zero.</description>
    <errorConditionFormula>((ISPICKVAL(PRIORVALUE(FieloPLT__StockManagement__c), &apos;Controlled By Quantity&apos;) &amp;&amp; (ISPICKVAL(FieloPLT__StockManagement__c, &apos;Unlimited&apos;) || ISPICKVAL(FieloPLT__StockManagement__c, &apos;Controlled By Item&apos;))) ||
(ISPICKVAL(PRIORVALUE(FieloPLT__StockManagement__c), &apos;Controlled By Item&apos;) &amp;&amp; (ISPICKVAL(FieloPLT__StockManagement__c, &apos;Unlimited&apos;) ||
ISPICKVAL(FieloPLT__StockManagement__c, &apos;Controlled By Quantity&apos;)))) &amp;&amp;
FieloPLT__Stock__c &gt; 0</errorConditionFormula>
    <errorDisplayField>FieloPLT__StockManagement__c</errorDisplayField>
    <errorMessage>Only allowed when stock equals zero.</errorMessage>
</ValidationRule>