force-app/main/default/objects/FieloPLT__Reward__c/validationRules/FieloPLT__MultiVoucher.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__MultiVoucher</fullName>
    <active>true</active>
    <description>&quot;Controlled by Item&quot; Rewards with preloaded Vouchers cannot have a Unique Voucher.</description>
    <errorConditionFormula>FieloPLT__UniqueVoucher__c &amp;&amp;  ISPICKVAL(FieloPLT__StockManagement__c, &apos;Controlled By Item&apos;)</errorConditionFormula>
    <errorMessage>&quot;Controlled by Item&quot; Rewards with preloaded Vouchers cannot have a Unique Voucher.</errorMessage>
</ValidationRule>