force-app/main/default/objects/FieloPLT__Reward__c/validationRules/FieloPLT__PointsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__PointsRequired</fullName>
    <active>true</active>
    <description>You must specify a point value for the Reward.</description>
    <errorConditionFormula>ISNULL( FieloPLT__Points__c )</errorConditionFormula>
    <errorDisplayField>FieloPLT__Points__c</errorDisplayField>
    <errorMessage>You must specify a point value for the Reward.</errorMessage>
</ValidationRule>