force-app/main/default/objects/FieloPLT__Reward__c/validationRules/FieloPLT__PositivePointsQuantity.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__PositivePointsQuantity</fullName>
    <active>true</active>
    <description>The number of Points must be positive.</description>
    <errorConditionFormula>FieloPLT__Points__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FieloPLT__Points__c</errorDisplayField>
    <errorMessage>The number of Points must be positive.</errorMessage>
</ValidationRule>