force-app/main/default/objects/FieloPLT__Reward__c/validationRules/FieloPLT__PositiveStock.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__PositiveStock</fullName>
    <active>true</active>
    <description>Stock must be positive.</description>
    <errorConditionFormula>AND( 
IF(ISCHANGED(FieloPLT__Stock__c) , 
IF( FieloPLT__Stock__c &lt; 0 , 
true, 
false), 
false), 
NOT( ISPICKVAL(FieloPLT__StockManagement__c, &apos;Unlimited&apos;) ) 
)</errorConditionFormula>
    <errorMessage>Stock must be positive.</errorMessage>
</ValidationRule>