force-app/main/default/objects/FieloPLT__Reward__c/validationRules/FieloPLT__PositiveUnitCost.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__PositiveUnitCost</fullName>
    <active>true</active>
    <description>Value must be positive.</description>
    <errorConditionFormula>FieloPLT__UnitCost__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FieloPLT__UnitCost__c</errorDisplayField>
    <errorMessage>Value must be positive.</errorMessage>
</ValidationRule>