force-app/main/default/objects/FieloPLT__Reward__c/validationRules/Valida_Lance_Minimo_e_Resgatar_Agora.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Lance_Minimo_e_Resgatar_Agora</fullName>
    <active>true</active>
    <description>Se o campo &quot;Lance Mínimo&quot; estiver preenchido, o campo &quot;Lance para Resgatar&quot; precisa estar vazio, e vice-versa.</description>
    <errorConditionFormula>OR(

AND(
RecordType.Name = &quot;Leilões&quot;,
NOT(ISNULL(V_LanceMinimo__c)),
NOT(ISNULL(V_LanceResgatarAgora__c))
),

AND(
RecordType.Name = &quot;Leilões&quot;,
OR(
V_LanceMinimo__c = 0,
V_LanceResgatarAgora__c = 0)
))</errorConditionFormula>
    <errorDisplayField>V_LanceMinimo__c</errorDisplayField>
    <errorMessage>Se o campo &quot;Lance Mínimo&quot; estiver preenchido, o campo &quot;Lance para Resgatar&quot; precisa estar vazio, e vice-versa. Nenhum desses campos pode conter o valor zero também.</errorMessage>
</ValidationRule>