force-app/main/default/objects/FieloPLT__Reward__c/validationRules/Valida_Pontos_de_Youbet_Perene.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Pontos_de_Youbet_Perene</fullName>
    <active>true</active>
    <description>Não permite incluir valor de resgate do Youbet Perene que seja diferente de 1, já que o valor do lance será utilizado na quantidade.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Leiloes&quot;,
ISPICKVAL(Iniciativa__c, &quot;Youbet Perene&quot;),
OR(
FieloPLT__Points__c &lt;&gt; 1,
V_BetcoinsComp__c &lt;&gt; 0)

)</errorConditionFormula>
    <errorDisplayField>FieloPLT__Points__c</errorDisplayField>
    <errorMessage>Para Youbet Perene, o campo &quot;Pontos&quot; deve ser 1 e o campo &quot;Betcoins - Extra&quot; deve ser 0.</errorMessage>
</ValidationRule>